# flama-simple

./: .gitattributes  .gitignore  COMMIT_MESSAGE.txt  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
live-collaboration-tool/: .gitignore  README.md
live-collaboration-tool/client/: .npmignore  config-overrides.js  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.lib.json
live-collaboration-tool/client/docs/: annotation-module.md  collab-architecture.md  document-adapters.md  document-viewer.md  rendering-pipeline.md  storage-pipeline.md
live-collaboration-tool/client/src/: App.css  App.tsx  index.tsx
live-collaboration-tool/client/src/examples/: DocumentViewerDemo.tsx  MinimalUsage.tsx  SketchupViewerDemo.tsx  WebtoonViewerDemo.tsx
live-collaboration-tool/client/src/lib/: index.ts  types.ts  utils.ts
live-collaboration-tool/client/src/lib/annotations/: AnnotationService.ts  types.ts
live-collaboration-tool/client/src/lib/canvas/: Canvas2DViewer.ts  CanvasManager.ts
live-collaboration-tool/client/src/lib/collaboration/: AwarenessManager.ts  CanvasViewerManager.ts  ChatManager.ts  CollaborationManager.ts  PinpointManager.ts  RealTimeDrawingManager.ts  YjsDrawingManager.ts
live-collaboration-tool/client/src/lib/components/: CanvasThumbnailNavigator.tsx  CanvasViewer.tsx  DocumentViewer.css  DocumentViewer.tsx  DocumentViewerWithUpload.tsx  LiveCollabCanvas.tsx  PdfPageBlock.tsx  SketchupPinpointForm.tsx  SketchupViewer.tsx  WebtoonViewer.css  WebtoonViewer.tsx
live-collaboration-tool/client/src/lib/documents/: storage.ts  types.ts
live-collaboration-tool/client/src/lib/realtime/: RealtimeClient.ts
live-collaboration-tool/client/src/lib/sketchup/: SketchupUploader.ts  index.ts  types.ts
live-collaboration-tool/client/src/lib/utils/: canvasCoordinateConverter.ts  canvasStorage.ts  documentAdapters.ts  websocket.ts
live-collaboration-tool/client/src/types/: jszip.d.ts  mammoth.d.ts
live-collaboration-tool/docs/: collaboration.md  sketchup-nextstep.md  sketchup-testing.md  sketchup-viewer-design.md
live-collaboration-tool/server/: .env  .npmignore  README.md  env.example  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
live-collaboration-tool/server/src/: index.ts  server.js
live-collaboration-tool/server/src/sketchup/: README.md  index.ts  upload.ts
live-collaboration-tool/server/src/types/: gltf-pipeline.d.ts
live-collaboration-tool/server/src/yjs/: setupWSConnection.ts
live-collaboration-tool/tools/sketchup-csdk-converter/: CMakeLists.txt
live-collaboration-tool/tools/sketchup-csdk-converter/frameworks/SketchUpAPI.framework/Versions/A/Frameworks/: libCommonGeometry.dylib  libCommonGeoutils.dylib  libCommonPreferences.dylib  libCommonUnits.dylib  libCommonUtils.dylib  libCommonZip.dylib
live-collaboration-tool/tools/sketchup-csdk-converter/frameworks/SketchUpAPI.framework/Versions/A/Headers/model/: dimension_linear.h  entities.h
live-collaboration-tool/tools/sketchup-csdk-converter/frameworks/SketchUpAPI.framework/Versions/A/Resources/: Info.plist
live-collaboration-tool/tools/sketchup-csdk-converter/frameworks/SketchUpAPI.framework/Versions/A/_CodeSignature/: CodeResources
live-collaboration-tool/tools/sketchup-csdk-converter/src/: main.cpp
test_reaact/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
test_reaact/src/: App.tsx
test_reaact/src/examples/: BasicCanvasExample.tsx  CanvasViewerExample.tsx  DocumentViewerExample.tsx  IntegratedExample.tsx  MinimalCanvasExample.tsx  MultipleCanvasExample.tsx  SketchupExample.tsx  demoUser.ts  index.ts
(+15 files in other folders)
